lib/tests/fixtures/compiler/evaluation/method_call_in_type_spec.pp
type Invalid = Integer[foo.each |$x| {}]
